pp-button-wrap was being styled as a default under advanced module, this was an error now fixed

--- a/scss/components/advanced_modules/powerpack/_infobox.scss
+++ b/scss/components/advanced_modules/powerpack/_infobox.scss
@@ -1,14 +1,14 @@
-
-.pp-button-wrap {
-	margin-top:20px;
-	margin-bottom:15px;
-}
-
-.pp-button-wrap a{
-	border-radius:4px 4px 4px 4px !important;	
-	font-size: 18px !important;
-}
- 
+//
+//.pp-button-wrap {
+//	margin-top:20px;
+//	margin-bottom:15px;
+//}
+//
+//.pp-button-wrap a{
+//	border-radius:4px 4px 4px 4px !important;	
+//	font-size: 18px !important;
+//}
+// 
 .lb-infobox {
 	.pp-infobox{
 		@include addMaterial();
